app/static/styles.css
  html, body {
    padding: 0;
    margin: 0;
    background: #FAFAFA;
    font-family: Arial, sans-serif;
    max-width: 100%;
  }
  
  .header {
    min-height: 45px;
    width: 100%;
    height: 10vh;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
    background: #333;
    color: #FFF;
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 0 16px;
    position: fixed;
    z-index: 3;
  }

  .header-compacted {
    max-height: 10vh !important;
  }


  .header-expanded {
    width: 100%;
    height: 85vh;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
    background: #333;
    color: #FFF;
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 0 16px;
    z-index: 3;
  }
  


  .parallax { 
    background-image: url("../images/TapestryForTheDisappearingPeople.jpg");
    height: 75vh;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
  }


  .headerImg {
    min-height: 50vh;
    max-height: 65vh;
    min-width: 100vw;
  }

  .headerImgTwo {
    padding-top: 5vh;
    padding-bottom: 1vh;
    width: 100%;
    max-width: 785px;
    margin-right: auto;
    margin-left: auto;
  }

  .mainImageHolder {
    width: 100%;
    right: 50;
    text-align: center;  
  }

  .imgDescription {
    margin-bottom: 4vh;
  }

  

  .frontPageCard {
    min-width: 80vw;
    height: 60vh;
    /* padding-right: 2vw; */
    margin-right: 10vw;
    margin-left: 10vw;
    border: 1px solid rgba(0, 0, 0, 1);
    border-radius: 10px;
    margin-top: 10vh;
    margin-bottom: 10vh;
    box-shadow: 3px 3px 10px grey;
    display: inline-block;
    scroll-snap-align: center;
    /* animation: pullOutCard 5s linear; */
    /* animation-play-state: paused; */
    background-color: #FAFAFA;
}

.spacer {
  min-width: 10vw;
}


  .frontPageCard div:hover {
    /* Toggle our animation play state to running when we are hovering over our sticker */
    /* animation-play-state: running; */
    background-color: red;
  }


  .frontPageTextBoxHeader {
    height: 15vh;
    padding-left: 5vw;
    padding-right: 55vw;
  }


  .headerText {
    padding-top: 12vh;
    text-align: left;
    padding-left: 5vw;
    margin-top: 0px !important;
  }



  .header__menu-toggle {
    background: none;
    border: none;
    width: 24px;
    height: 24px;
    padding: 0;
    margin: 0;
    color: #FFF;
  }

  button {
    outline: none !important;
  }

  .menu-button {
    outline: none !important;
    position: fixed;
    top: 0;
    padding-top: 2.5vh;
    height: 10vh;
    padding-right: 1vw;
    right: 15px;
    z-index: 4;

  }

  .menu-title {
    outline: none !important;
    position: fixed;
    color: #CCC;
    height: 10vh;
    font-size: 5vh;
    top: 0vh;
    margin: 0;
    line-height: 10vh;
    left: 15vw;
    z-index: 4;
  }

  .frontPageTextBox {
    padding: 3rem;
  }

  @keyframes pullOutCard {
    0% { transform: scale(1); }
    100% { transform: scale(2); }
  }

  .cardContainer {
    display: flex;
    overflow-x: scroll;
    scroll-snap-type: x mandatory;
    background-color: lightgray;
    border: black;
    border-width: 2px;
    border-top: 1px solid rgba(0, 0, 0, 1);
    border-bottom: 1px solid rgba(0, 0, 0, 1);
    box-shadow: inset 0px 0px 20px 0px grey;
  }

  .cardImageContainer {
    overflow: hidden;
    height: 45vh;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
  }

  .cardImage {
    width: 80vw;
    min-height: 225px;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
  }

  .cardFooter {
    border-top: 1px solid #333;
    background-color: #FAFAFA;
  }

  
  .header-content li {
    height: 10vh;
    line-height: 10vh;
    padding-left: 15vw;
    padding-right: 15vw;
    font-size: 2rem;
    color: #CCC;
  }
  
  .header-content li:hover {
    background: #CCC;
  }

  .header-content li a {
    color: white;
    text-decoration: none; /* no underline */
    display: block;
  }


  .footer {
    height: 25vh;
    background: #333;
  }

  .footerLinksContainer {
    height: 100%;
    list-style-type: none;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: center;
    justify-content: space-around;
    padding-right: 5vw;
    padding-left: 5vw;
  }

  .footerLinksContainer > li {
    color: white;
    text-align: center;
  }

  .footerLinksContainer li a {
    color: white;
    text-decoration: none; /* no underline */
    display: block;
  }






  /* **************** HEADER TRANSITIONS AND ANIMATIONS **************** */

  /* Transforming the header */
  .transformNavUp {
    height: 85vh;
    animation: transformNavTop 1s;
  }

  @keyframes transformNavTop {
    0% { transform: translateY(0vh); }
    100% { transform: translateY(-75vh); }
  }

  .transformNavDown {
    animation: transformNavBottom 1s;
    min-height: 85vh;
  }

  @keyframes transformNavBottom {
    0% { transform: translateY(-75vh); }
    100% { transform: translateY(0vh); }
  }

  .titleFadeIn {
    animation: fadeTitleIn 1s;
    opacity: 1;
  }

  @keyframes fadeTitleIn {
    0% { opacity: 0; }
    100% { opacity: 1; }
  }

  .titleFadeOut {
    animation: fadeTitleOut 1s;
    opacity: 0;
  }

  @keyframes fadeTitleOut {
    0% { opacity: 1; }
    100% { opacity: 0; }
  }
  
  .header-content {
    padding-top: 32px;
    flex: 1;
    list-style: none;
    padding: 0;
    margin: 0;
    overflow-x: hidden;
    overflow-y: auto;
    -webkit-overflow-scrolling: touch;
  }

  .header-content.hidden {
    opacity: 0;
  }

  .header-content.hide li #header1 {
    animation: hideHeaderList1 1s;
  }

  @keyframes hideHeaderList1 {
    0% {opacity: 1;}
    25% {opacity: .1;}
    50% {opacity: 0;}
    100% {opacity: 0;}
  }

  .header-content.hide li #header2 {
    animation: hideHeaderListMiddle 1s;
  }

  .header-content.hide li #header3 {
    animation: hideHeaderListMiddle 1s;
  }


  @keyframes hideHeaderListMiddle {
    0% {opacity: 1;}
    25% {opacity: .2;}
    50% {opacity: 0;}
    100% {opacity: 0;}
  }


  .header-content.hide li #header4 {
    animation: hideHeaderList4 1s;
  }

  @keyframes hideHeaderList4 {
    0% {opacity: 1;}
    25% {opacity: .4;}
    50% {opacity: .1;}
    100% {opacity: 0;}
  }
  


  .header-content.reveal li #header1 {
    animation: revealHeaderItem1 1s;
  }

  @keyframes revealHeaderItem1 {
    0% {opacity: 0;}
    50% {opacity: .1;}
    100% {opacity: 1;}
  }

  .header-content.reveal li #header2 {
    animation: revealHeaderItem2 1s;
  }

  @keyframes revealHeaderItem2 {
    0% {opacity: 0;}
    25% {opacity: 0;}
    50% {opacity: .2;}
    100% {opacity: 1;}
  }
  .header-content.reveal li #header3 {
    animation: revealHeaderItem3 1s;
  }

  @keyframes revealHeaderItem3 {
    0% {opacity: 0;}
    25% {opacity: .1;}
    50% {opacity: .2;}
    100% {opacity: 1;}
  }

  .header-content.reveal li #header4 {
    animation: revealHeaderItem4 1s;
  }

  @keyframes revealHeaderItem4 {
    0% {opacity: 0;}
    25% {opacity: .1;}
    50% {opacity: .4;}
    100% {opacity: 1;}
  }
  
  






/* ************ MEDIA QUERIES ************ */
  
  
/* iPads (portrait and landscape) ----------- */
@media only screen and (max-device-width : 500px) {
  .profileImg {
    width: 74vw;
    position: absolute;
    min-height: 35vh;
    top: 50vh;
    left: 13vw;
    border: 5px solid #fff;
    border-radius: 3px;
    box-shadow: 0px -20px 20px 0px grey; 
  }

  .frontPageCard {
    min-width: 80vw !important;
    margin-right: 20vw !important;
  }

  
  .frontPageTextBoxHeader {
    height: 20vh;
    padding-right: 5vw;
  }

  .headerText {
    padding-top: 20vh;
    text-align: center;
    margin-top: 0px !important;
  }

}

/* iPads (portrait and landscape) ----------- */
@media only screen and (min-device-width : 501px) and (max-device-width : 767px) {
  .profileImg {
    width: 74vw;
    max-height: 55vh;
    min-height: 50vh;
    position: absolute;
    top: 35vh;
    /* right: 40vw; */
    left: 13vw;
    border: 5px solid #fff;
    border-radius: 3px;
    box-shadow: 3px 3px 8px grey;
  }

  
  .frontPageTextBoxHeader {
    height: 30vh;
    padding-right: 5vw;
  }

  .headerText {
    padding-top: 20vh;
    margin-bottom: 5vh;
    text-align: center;
    margin-top: 0px !important;
  }

}

/* iPads (portrait and landscape) ----------- */
@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
    .profileImg {
      min-width: 40vw;
      min-height: 35vh;
      max-width: 50vw;
      max-height: 50vh;
      position: absolute;
      top: 50vh;
      right: 8vw;
      border: 5px solid #fff;
      border-radius: 3px;
      box-shadow: 3px 3px 8px grey;
    }

  
    .frontPageTextBoxHeader {
      height: 15vh;
      min-height: 130px;
      padding-left: 5vw;
      padding-right: 60vw;
    }

    
    .headerText {
      padding-top: 12vh;
      text-align: left;
      padding-left: 5vw;
      margin-top: 0px !important;
    }
  

  }

  @media only screen and (min-device-width : 1025px) {

  .profileImg {
    min-width: 35vw;
    min-height: 40vh;
    max-width: 45vw;
    max-height: 50vh;
    position: absolute;
    top: 45vh;
    right: 10vw;
    border: 5px solid #fff;
    border-radius: 3px;
    box-shadow: 3px 3px 8px grey;
  }
}

